lib/api/iisnode/HP-SORO-18940-stderr-1726561351232.txt
Application has thrown an uncaught exception and is terminated:
D:\DocumentEcole\ECOLES\DEUXIEME ANNEE\LANGUAGE\FLUTTERS\TESTS\gedcocanne\lib\api\config.js:21
    connectionString = 'Driver={'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid shorthand property initializer
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1290:20)
    at Module._compile (node:internal/modules/cjs/loader:1342:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1437:10)
    at Module.load (node:internal/modules/cjs/loader:1212:32)
    at Module._load (node:internal/modules/cjs/loader:1028:12)
    at Module.require (node:internal/modules/cjs/loader:1237:19)
    at require (node:internal/modules/helpers:176:18)
    at Object.<anonymous> (D:\DocumentEcole\ECOLES\DEUXIEME ANNEE\LANGUAGE\FLUTTERS\TESTS\gedcocanne\lib\api\routes\table_canne.js:3:30)
    at Module._compile (node:internal/modules/cjs/loader:1378:14)
